[package]
name = "exl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
crossterm = "0.26.1"
rand = "0.8.5"
csv = "1.2.1"
