[package]
name = "exl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = "0.23.0"
tui-textarea = { version = "*", features = ["ratatui-crossterm"], default-features = false }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
